--- a/typerep.opam
+++ b/typerep.opam
@@ -9,6 +9,7 @@ build: [
   ["jbuilder" "build-package" "typerep" "-j" jobs]
 ]
 depends: [
+  "base"
   "jbuilder"
 ]
 available: [ ocaml-version >= "4.03.0" ]
