--- a/typerep.opam
+++ b/typerep.opam
@@ -6,7 +6,7 @@ bug-reports: "https://github.com/janestreet/typerep/issues"
 dev-repo: "git+https://github.com/janestreet/typerep.git"
 license: "Apache-2.0"
 build: [
-  ["jbuilder" "build" "--only-packages" "typerep" "--root" "." "-j" jobs "@install"]
+  ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 depends: [
   "base"
