--- a/typerep.opam
+++ b/typerep.opam
@@ -1,4 +1,5 @@
 opam-version: "1.2"
+version: "v0.10.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/typerep"
@@ -9,7 +10,7 @@ build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "base"
+  "base"     {>= "v0.10" & < "v0.11"}
   "jbuilder" {build & >= "1.0+beta12"}
 ]
 available: [ ocaml-version >= "4.04.1" ]
