--- a/typerep.opam
+++ b/typerep.opam
@@ -4,7 +4,7 @@ authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/typerep"
 bug-reports: "https://github.com/janestreet/typerep/issues"
 dev-repo: "git+https://github.com/janestreet/typerep.git"
-license: "Apache-2.0"
+license: "MIT"
 build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
