--- a/typerep.opam
+++ b/typerep.opam
@@ -12,7 +12,7 @@ build: [
 depends: [
   "ocaml" {>= "4.04.2"}
   "base"
-  "dune" {build & >= "1.5.1"}
+  "dune" {>= "1.5.1"}
 ]
 synopsis: "Typerep is a library for runtime types"
 description: "
