--- a/typerep.opam
+++ b/typerep.opam
@@ -14,6 +14,7 @@ depends: [
   "base"
   "dune" {>= "2.0.0"}
 ]
+available: arch != "arm32" & arch != "x86_32"
 synopsis: "Typerep is a library for runtime types"
 description: "
 "
