--- a/lib/dune
+++ b/lib/dune
@@ -1,2 +1,5 @@
-(library (name typerep_lib) (public_name typerep)
- (preprocess no_preprocessing) (libraries base))
+(library
+ (name typerep_lib)
+ (public_name typerep)
+ (preprocess no_preprocessing)
+ (libraries base))
